--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fraction": "^0.2.0",
     "fraction.js": "^4.2.0",
     "fractional": "^1.0.0",
+    "fracty": "^1.0.11",
     "regenerator-runtime": "^0.13.9"
   }
 }
